<resources>
    <string name="app_name">social</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_demo">demo</string>
    <string name="title_activity_pull_to_refresh">PullToRefreshActivity</string>
    <string name="net_disconnect">您当前的网络没有连接,请检查设置</string>
    <string name="title_activity_main">MainActivity</string>
    <!--主页字段设置-->
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>

  <!--  我的好友界面 -->
    <string name="my_friends">我的好友</string>
    <string name="add_friends">添加好友</string>

    <!--  添加好友界面 -->
    <string name="input_account">请输入好友账号</string>
    <string name="search">搜索</string>
    <!--  我的好友管理 -->
    <string name="remark">备注</string>


    <!--  加载框-->
    <string name="empty_string">empty</string>
    <string name="dynamicbox_retry">Retry</string>

    <string name="dynamicbox_loading_title"></string>
    <string name="dynamicbox_loading_message"></string>

    <string name="dynamicbox_internet_off_title">Error</string>
    <string name="dynamicbox_internet_off_message">Internet is off, please enable it</string>

    <string name="dynamicbox_exception_title">Error</string>
    <string name="dynamicbox_exception_message">An error has occurred, retry again</string>


    <string name="loading">正在加载数据</string>
    <string name="data_loading">数据加载中...</string>


    <!--登录界面-->
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="phone_no">手机号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="fast_login">快速登录</string>
    <string name="register">注册</string>


   <!-- 消息界面-->

    <string name="friend_dynamic">好友动态</string>
    <string name="friend_message">好友消息</string>
    <string name="friend_request">好友请求</string>
   <!-- 添加好友-->
    <string name="search_username">搜索用户名</string>


    <string name="send">发送</string>

<!--我的界面-->

    <string name="share">分享</string>
    <string name="posting">发表日志</string>
    <string name="setting">设置</string>
    <string name="more">更多</string>
    <string name="zone">空间动态</string>

    <string name="registered">已经注册,请</string>


    <string name="next_step">下一步</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_username">用户名(6-12位字符,首字符必须以字母开头)</string>
    <string name="please_input_pwd">密码(6-12位字符)</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="confirm_password">确认密码</string>

    <string name="complete">完成</string>
    <string name="email">邮箱:</string>
    <string name="password">密码:</string>




    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="email_sample">sample@mail.com</string>
    <string name="passwrod_sample">不少于4位的数字或字母</string>
    <!--完善资料-->
    <string name="complete_information">完善资料</string>
    <string name="select_own_icon">*选择属于自己的头像</string>
    <string name="nicker">昵称</string>
    <string name="sex">性别</string>
    <string name="mail">男</string>
    <string name="femail">女</string>




    <string name="please_input_your_nicker">请输入您的昵称</string>


    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="remember_write_title">记得写标题哦~</string>
    <string name="publish_log_detail">帖子光着好害羞，有图片或文字才能发布~</string>
    <string name="locate_position">定位当前位置</string>


    <string name="publish_log">发表日志</string>
    <string name="publish">发布</string>


    <!--    toast信息-->
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="password_format_error">密码不能小于6个字符</string>
    <string name="username_format_error">用户名格式不正确</string>
    <string name="email_format_error">邮箱格式不正确</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="please_input_necker">请填写昵称</string>
    <string name="please_select_headicon">请选择一张头像</string>
    <string name="upload_image_success">图片上传成功</string>
    <string name="upload_image_failure">图片上传失败</string>
    <string name="im_login_failure">IM登录失败</string>
    <string name="im_login_success">IM登录成功</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_password">请输入密码</string>
    <string name="im_quit_success">IM退出成功</string>
    <string name="im_quit_failure">IM退出失败</string>
    <string name="location_failure">定位失败</string>
    <string name="title_blank_error">标题不能为空</string>
    <string name="content_blank_error">内容不能为空</string>
    <string name="please_obtain_location">请获取当前位置</string>


</resources>
