<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/activity_header_title"
        ></include>
    <org.buraktamturk.loadingview.LoadingView
        android:id="@+id/loadingview"
        app:lv_loading="false"
        style="@style/base_style_mw">

        <LinearLayout
           style="@style/linear_layout_vertical_mw">
        <LinearLayout
            style="@style/base_style_mw"
            android:gravity="center"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:paddingTop="@dimen/verticl_margin"
            >
            <TextView
               style="@style/commen_text_style_ww"
                android:text="@string/email"/>
            <cn.com.elex.social_life.support.view.EditTextWithDeleteButton
                android:id="@+id/et_email"
                style="@style/base_style_mw"
                android:layout_marginLeft="5dp"
                app:hintText="@string/email_sample"
                app:isShowDeleteBt="true"
                app:textSize="@dimen/common_text_size"
                />
        </LinearLayout>
        <View
            style="@style/divider_style"
            android:background="@color/orangle"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            ></View>
        <LinearLayout
            style="@style/base_style_mw"
            android:gravity="center"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:paddingTop="@dimen/verticl_margin">
            <TextView
                style="@style/commen_text_style_ww"
                android:text="@string/password"/>
            <cn.com.elex.social_life.support.view.EditTextWithDeleteButton
                android:id="@+id/et_pwd"
                style="@style/base_style_mw"
                android:layout_marginLeft="5dp"
                app:hintText="@string/passwrod_sample"
                app:isShowDeleteBt="true"
                app:textSize="@dimen/common_text_size"
                app:digits="@string/register_name_digits"
                app:password="true"
                />
        </LinearLayout>
        <View
            style="@style/divider_style"
            android:background="@color/orangle"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            ></View>
        </LinearLayout>
    </org.buraktamturk.loadingview.LoadingView>

    <TextView
        android:id="@+id/btn_register"
        style="@style/btn_commit_style"
        android:text="@string/register"
        />
</LinearLayout>