<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/activity_header_title"></include>

    <org.buraktamturk.loadingview.LoadingView
        android:id="@+id/loadingview"
        app:lv_loading="false"
        app:lv_color="@android:color/holo_red_dark"
        style="@style/base_style_mw">

        <LinearLayout
            style="@style/linear_layout_vertical_mw"
            android:layout_marginTop="10dp">

            <LinearLayout
                style="@style/linear_layout_horizontal_mw"
                android:padding="10dp">

                <cn.com.elex.social_life.support.view.EditTextWithDeleteButton
                    android:id="@+id/et_username"
                    style="@style/base_style_mw"
                    android:layout_marginLeft="6dp"
                    app:textSize="@dimen/common_text_size"
                    app:hintText="@string/please_input_email"
                    app:isShowDeleteBt="true"
                    />
            </LinearLayout>

            <View style="@style/divider_style"></View>

            <LinearLayout
                style="@style/linear_layout_horizontal_mw"
                android:padding="10dp">

                <cn.com.elex.social_life.support.view.EditTextWithDeleteButton
                    android:id="@+id/et_userpwd"
                    style="@style/base_style_mw"
                    android:layout_marginLeft="6dp"
                    app:textSize="@dimen/common_text_size"
                    app:hintText="@string/please_input_password"
                    app:isShowDeleteBt="true"
                     />
            </LinearLayout>

        </LinearLayout>
    </org.buraktamturk.loadingview.LoadingView>

        <TextView
            android:id="@+id/btn_login"
            style="@style/big_text_style_ww"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="20dp"
            android:background="@drawable/btn_public_orange"
            android:text="@string/login"
            android:textColor="@color/white" />

        <RelativeLayout
            style="@style/base_style_mw"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_forgetpwd"
                style="@style/sml_text_style_ww"
                android:text="@string/forget_pwd"
                android:layout_alignParentRight="true"

                android:textColor="@color/orangle" />
        </RelativeLayout>
</LinearLayout>